--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ body {
 
 #container {
     width: 360px;
-    margin: auto;
-    border: solid red 1px;
+    margin: 56px auto 0px;
 }
 
 #profile {
@@ -34,9 +33,16 @@ body {
     justify-content: center;
     margin: auto;
     display: block;
+    padding: 24px;
 }
 
 #userName {
     font-weight: 500;
     line-height: 24px;
+    margin-top: 8px;
+}
+
+.links {
+    text-align: center;
+    margin: auto;
 }
