--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 :root {
@@ -11,8 +11,6 @@
 
 body {
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
-    min-height: 100vh;
-
 }
 
 #container {
@@ -22,6 +20,7 @@ body {
 
 #profile {
     text-align: center;
+    padding: 24px;
 
 }
 
@@ -42,7 +41,40 @@ body {
     margin-top: 8px;
 }
 
-.links {
-    text-align: center;
-    margin: auto;
+/* links */
+ul {
+    list-style: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+ul li a {
+
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+
+    display: flex;
+    gap: 16px;
+    padding: 16px 24px;
+
+    background: rgba(255 255, 255, 0.2);
+    border: 1 px solid rgba(255 255, 255, 0.7);
+    border-radius: 8px;
+
+    backdrop-filter: blur(4px) saturate(180%);
+    -webkit-backdrop-filter: blur(4px) saturate(180%);
+
+    color: #ffffff;
+    font-weight: 500;
+
+    transition: background 0.2s;
+}
+
+/* pseudo-selector */
+ul li a:hover {
+    background: rgba(255 255, 255, 0.02);
+    border: 1.5px solid white;
 }
