--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #ffffff;
 }
 
 :root {
     font-family: "Inter", sans-serif;
-    color: #ffffff;
 }
 
 body {
@@ -16,6 +16,7 @@ body {
 #container {
     width: 360px;
     margin: 56px auto 0px;
+    padding: 0 24px;
 }
 
 #profile {
@@ -25,8 +26,8 @@ body {
 }
 
 .avatar {
-    width: 112px;
-    height: 112px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%;
     justify-content: center;
@@ -48,6 +49,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    padding: 24px 0;
 }
 
 ul li a {
@@ -67,7 +69,6 @@ ul li a {
     backdrop-filter: blur(4px) saturate(180%);
     -webkit-backdrop-filter: blur(4px) saturate(180%);
 
-    color: #ffffff;
     font-weight: 500;
 
     transition: background 0.2s;
@@ -77,4 +78,29 @@ ul li a {
 ul li a:hover {
     background: rgba(255 255, 255, 0.02);
     border: 1.5px solid white;
+}
+
+#social-links {
+    display: flex;
+    gap: 10px;
+
+    justify-content: center;
+    padding: 24px 0;
+    font-size: 24px;
+}
+
+#social-links a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    border-radius: 50%;
+}
+
+
+#social-links a:hover {
+    background: rgba(255 255, 255, 0.05);
+    border: 1.5px solid white;
+    backdrop-filter: blur(4px) saturate(180%);
+    -webkit-backdrop-filter: blur(4px) saturate(180%);
 }
