--- a/style.css
+++ b/style.css
@@ -7,14 +7,29 @@
 
 :root {
     font-family: "Inter", sans-serif;
+    --text-color: white;
+    --bg-url: url(./assets/bg-mobile.jpg);
+    --fumaca: url(./assets/fumaca.png);
+}
+
+.light {
+    --text-color: black;
+    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --faisca: url(./assets/faisca.jpeg);
 }
 
 body {
-    background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+    background: no-repeat top center/cover;
+    background-image: var(--bg-url);
+}
+
+body * {
+    color: var(--text-color);
 }
 
 #container {
     width: 360px;
+    height: 712px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -26,10 +41,11 @@ body {
 }
 
 .avatar {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     border-radius: 50%;
+
     justify-content: center;
     margin: auto;
     display: block;
@@ -77,7 +93,7 @@ ul li a {
 /* pseudo-selector */
 ul li a:hover {
     background: rgba(255 255, 255, 0.02);
-    border: 1.5px solid white;
+    border: 1.5px solid var(--text-color);
 }
 
 #social-links {
@@ -93,14 +109,60 @@ ul li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px;
+
+    padding: 10px;
     border-radius: 50%;
 }
 
 
 #social-links a:hover {
     background: rgba(255 255, 255, 0.05);
-    border: 1.5px solid white;
+    border: 1.5px solid var(--text-color);
     backdrop-filter: blur(4px) saturate(180%);
     -webkit-backdrop-filter: blur(4px) saturate(180%);
+}
+
+
+
+
+.dark-fumaca {
+
+    background: var(--fumaca) no-repeat center/cover;
+
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+
+    justify-items: center;
+    align-items: center;
+    margin: auto;
+    transition: transform 0, 3s ease;
+}
+
+.dark-fumaca:hover {
+    transform: scale(5);
+
+
+    justify-items: center;
+    align-items: center;
+    margin: auto;
+    transition: transform 0, 3s ease;
+
+}
+
+.text-lulu {
+
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: auto;
+    padding: 24px 24px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+
+    color: var(--text-color);
+    font-style: italic;
+
 }
