--- a/style.css
+++ b/style.css
@@ -10,13 +10,20 @@
     --text-color: white;
     --bg-url: url(./assets/bg-mobile.jpg);
     --fumaca: url(./assets/fumaca.png);
-    --stroke-color: 1 px solid rgba(255 255, 255, 0.7)
+    --stroke-color: rgba(0, 0, 0, 0.5);
+    --surface-color: rgba(0, 0, 0, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
 .light {
     --text-color: black;
     --bg-url: url(./assets/bg-mobile-light.jpg);
-    --faisca: url(./assets/faisca.jpeg);
+    --fumaca: url(./assets/faisca.jpeg);
+    --stroke-color: rgba(255, 255, 255, 0.5);
+    --surface-color: rgba(255, 255, 255, 0.05);
+    --surface-color-hover: rgba(255, 255, 255, 0.02);
+    --switch-bg-url: url(./assets/sun.svg);
 }
 
 body {
@@ -59,6 +66,7 @@ body * {
     margin-top: 8px;
 }
 
+
 /* links */
 ul {
     list-style: none;
@@ -79,7 +87,7 @@ ul li a {
     gap: 16px;
     padding: 16px 24px;
 
-    background: rgba(255 255, 255, 0.2);
+    background: var(--surface-colorr);
     border: var(--stroke-color);
     border-radius: 8px;
 
@@ -93,7 +101,8 @@ ul li a {
 
 /* pseudo-selector */
 ul li a:hover {
-    background: rgba(255 255, 255, 0.02);
+
+    background: var(--surface-color-hover);
     border: 1.5px solid var(--text-color);
 }
 
@@ -124,22 +133,27 @@ ul li a:hover {
 }
 
 
-
-
+/* classe para o fundo escuro com a imagem da fumaça */
 .dark-fumaca {
 
+    /* background é a imagem da fumaça */
     background: var(--fumaca) no-repeat center/cover;
 
+    /* dimensões do elemento */
     width: 200px;
     height: 200px;
+
+    /* arredondar as bordas */
     border-radius: 50%;
 
+    /* centralizar o conteúdo */
     justify-items: center;
     align-items: center;
     margin: auto;
     transition: transform 0, 3s ease;
 }
 
+/* centralizar o elemento */
 .dark-fumaca:hover {
     transform: scale(5);
 
@@ -149,6 +163,8 @@ ul li a:hover {
     margin: auto;
     transition: transform 0, 3s ease;
 
+    /* transição para o redimensionamento */
+    transition: transform 0, 3s ease;
 }
 
 .text-lulu {
@@ -166,4 +182,46 @@ ul li a:hover {
     color: var(--text-color);
     font-style: italic;
 
+}
+
+#switch {
+
+    margin: auto;
+    width: 64px;
+    position: relative;
+
+}
+
+#switch button {
+
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+
+    border: 0;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+#switch span {
+
+    display: block;
+    width: 64px;
+    height: 24px;
+
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}
+
+.light #switch button {
+    right: 0;
+    left: initial;
 }
