--- a/style.css
+++ b/style.css
@@ -12,13 +12,10 @@
     --fumaca: url(./assets/fumaca.png);
     --switch-bg-url: url(./assets/moon-stars.svg);
 
-
-    --stroke-color: rgba(0, 0, 0, 0.5);
+    --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(0, 0, 0, 0.01);
     --surface-color-hover: rgba(0, 0, 0, 0.05);
     --highilght-color: rgba(0, 0, 0, 0.1);
-
-
 
 }
 
@@ -27,7 +24,6 @@
     --bg-url: url(./assets/bg-mobile-light.jpg);
     --fumaca: url(./assets/faisca.jpeg);
     --switch-bg-url: url(./assets/sun.svg);
-
 
     --stroke-color: rgba(0, 0, 0, 0.87);
     --surface-color: rgba(0, 0, 0, 0.14);
@@ -46,7 +42,7 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 400px;
     height: 712px;
     margin: 56px auto 0px;
     padding: 0 24px;
@@ -75,7 +71,6 @@ body * {
     line-height: 24px;
     margin-top: 8px;
 }
-
 
 /* links */
 ul {
@@ -107,6 +102,7 @@ ul li a {
     font-weight: 500;
 
     transition: background 0.2s;
+    border: 1px solid var(--stroke-color);
 }
 
 /* pseudo-selector */
@@ -134,14 +130,12 @@ ul li a:hover {
     border-radius: 50%;
 }
 
-
 #social-links a:hover {
     background: rgba(255 255, 255, 0.05);
     border: 1.5px solid var(--text-color);
     backdrop-filter: blur(4px) saturate(180%);
     -webkit-backdrop-filter: blur(4px) saturate(180%);
 }
-
 
 /* classe para o fundo escuro com a imagem da fumaça */
 .dark-fumaca {
@@ -165,9 +159,9 @@ ul li a:hover {
 
 /* centralizar o elemento */
 .dark-fumaca:hover {
-    transform: scale(5);
+    transform: scale(2);
 
-
+    /* centralizar o conteúdo */
     justify-items: center;
     align-items: center;
     margin: auto;
@@ -175,6 +169,8 @@ ul li a:hover {
 
     /* transição para o redimensionamento */
     transition: transform 0, 3s ease;
+    position: relative;
+    z-index: 1;
 }
 
 .text-lulu {
@@ -198,7 +194,15 @@ ul li a:hover {
 
     margin: auto;
     width: 64px;
+
+    display: block;
+
+    flex-direction: column;
+
+    gap: 10px;
     position: relative;
+    left: 65%;
+    bottom: 60PX;
 
 }
 
@@ -207,7 +211,7 @@ ul li a:hover {
     width: 32px;
     height: 32px;
     background: white var(--switch-bg-url) no-repeat center;
-
+    margin-bottom: 60px;
     border: 0;
     border-radius: 50%;
     position: absolute;
@@ -216,9 +220,10 @@ ul li a:hover {
     top: 50%;
     left: 0;
     transform: translateY(-50%);
+
 }
 
-#switch span {
+#background-switch {
 
     display: block;
     width: 64px;
