--- a/style.css
+++ b/style.css
@@ -42,8 +42,9 @@ body * {
 }
 
 #container {
-    width: 400px;
-    height: 712px;
+    width: 100%;
+    max-width: 588px;
+
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -171,9 +172,12 @@ ul li a:hover {
     transition: transform 0, 3s ease;
     position: relative;
     z-index: 1;
+
+    background-image: ;
+
 }
 
-.text-lulu {
+#switch-text {
 
     text-align: center;
     display: flex;
@@ -181,7 +185,7 @@ ul li a:hover {
     align-items: center;
 
     margin: auto;
-    padding: 24px 24px;
+    padding: 0px 24px 0px 24px;
     font-family: "Roboto", sans-serif;
     font-weight: 100;
 
