--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(0, 0, 0, 0.01);
     --surface-color-hover: rgba(0, 0, 0, 0.05);
-    --highlight-color: rgba(0, 0, 0, 0.1);
+    --highlight-color: rgba(255, 255, 255, 0.2);
 }
 
 .light {
@@ -24,7 +24,7 @@
     --stroke-color: rgba(0, 0, 0, 0.87);
     --surface-color: rgba(0, 0, 0, 0.14);
     --surface-color-hover: rgba(0, 0, 0, 0.12);
-    --highlight-color: rgba(255, 255, 255, 0.2);
+    --highlight-color: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -128,7 +128,7 @@ ul li a:hover {
     justify-items: center;
     align-items: center;
     margin: auto;
-    transition: transform 0.3s ease;
+    transition: transform 0.4s ease;
 }
 
 /* centralizar o elemento */
@@ -175,6 +175,8 @@ ul li a:hover {
     top: 50%;
     left: 0;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
 #background-switch {
@@ -189,8 +191,11 @@ ul li a:hover {
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 /* Media queries */
@@ -201,5 +206,25 @@ ul li a:hover {
 
     .light {
         --bg-url: url(./assets/desktoplight.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0;
     }
 }
